--- a/05. vu/Tiki-Clone/tiki-clone/src/styles/DetailProduct/DetailProduct.module.scss
+++ b/05. vu/Tiki-Clone/tiki-clone/src/styles/DetailProduct/DetailProduct.module.scss
@@ -485,3 +485,351 @@
   // color: #00ab56;
   color: #808089;
 }
+.shippingInfo {
+  border: 1px solid rgb(238, 238, 238);
+  border-radius: 12px;
+  padding: 8px;
+  position: relative;
+  margin-right: 12px;
+  z-index: 1;
+  font-size: 13px;
+  line-height: 20px;
+  color: rgb(120, 120, 120);
+  flex: 1 1 0%;
+}
+.shippingInfoBottom {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  color: rgb(64, 45, 161);
+  background-color: rgb(242, 240, 254);
+  padding: 4px;
+  width: fit-content;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.shippingInfoBottom span:nth-child(1) {
+  font-size: 11px;
+  line-height: 16px;
+}
+.shippingInfoBottom span:last-child {
+  background-image: url(https://frontend.tikicdn.com/_desktop-next/static/img/icons/question-blue.svg);
+  width: 10px;
+  height: 10px;
+  background-size: 10px 10px;
+  margin-left: 4px;
+  box-sizing: border-box !important;
+  font-size: 11px;
+  line-height: 16px;
+}
+.shippingInfoBottom img {
+  width: 13px;
+  object-fit: contain;
+  margin-right: 5px;
+}
+.shippingFree {
+  margin-bottom: 2px;
+}
+.addToCart {
+  display: flex;
+  flex-direction: column;
+  margin: 16px 0px 0px;
+  padding: 16px 0px;
+  border-top: 1px solid rgb(242, 242, 242);
+}
+.qntyGroup p {
+  font-size: 15px;
+  line-height: 1.6;
+  margin: 0px 0px 10px !important;
+}
+.groupInput button {
+  cursor: pointer;
+  width: 30px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(236, 236, 236);
+}
+.groupInput button:first-child {
+  border-right: none;
+  border-radius: 4px 0px 0px 4px;
+  padding: 2px;
+}
+.groupInput button:last-child {
+  border-left: none;
+  border-radius: 0px 4px 4px 0px;
+  padding: 2px;
+}
+.groupInput input {
+  width: 40px;
+  border: 1px solid rgb(236, 236, 236);
+  height: 30px;
+  color: rgb(36, 36, 36);
+  font-size: 14px;
+  text-align: center;
+  outline: none;
+  transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+}
+.addGroup {
+  margin-top: 16px;
+  flex: 1 1 0%;
+  display: flex;
+}
+.addGroup button {
+  cursor: pointer;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  min-width: 190px;
+  width: 100%;
+  max-width: 300px;
+  height: 48px;
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 500;
+  text-transform: capitalize;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+}
+.addGroup button:first-child {
+  color: rgb(255, 255, 255);
+  background-color: rgb(255, 57, 69);
+}
+.addGroup button:nth-child(2) {
+  border: 1px solid rgb(13, 92, 182);
+  font-size: 15px;
+  line-height: 1.6;
+  color: rgb(13, 92, 182);
+  flex-direction: column;
+  text-transform: unset;
+  background: white;
+  -webkit-box-pack: center;
+  justify-content: center;
+  margin-left: 12px;
+}
+.chat {
+  margin: 0px 0px 0px 12px;
+  width: 48px;
+  height: 48px;
+  background: rgb(255, 255, 255);
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  border: 1px solid rgb(13, 92, 182);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.chat span {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 500;
+  margin: 3px 0px 0px;
+  color: rgb(13, 92, 182);
+}
+.thumbNailBottom {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  margin-top: 24px;
+}
+.thumbNailBottom button img {
+  width: 24px;
+}
+.thumbNailBottom button {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  background: rgb(242, 240, 254);
+  color: rgb(64, 45, 161);
+  max-height: 40px;
+}
+.thumbNailBottom span {
+  margin-left: 8px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+.customerBenefit {
+  display: flex;
+  padding: 8px;
+  border-top: 1px solid rgb(242, 242, 242);
+}
+.customerBenefit img {
+  width: 32px;
+  height: 32px !important  ;
+}
+.benefitItem {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 30%;
+  -webkit-box-flex: 1;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.benefitItem span {
+  text-align: center;
+  font-size: 13px;
+  line-height: 20px;
+  margin-top: 8px;
+}
+.compareShop {
+  border: 1px solid rgb(238, 238, 238);
+  display: flex;
+  border-radius: 4px;
+  -webkit-box-align: center;
+  align-items: center;
+  margin-top: 16px;
+  padding: 8px 12px;
+}
+.compareShopLeft {
+  max-width: 63%;
+}
+.compareShopLeft p:nth-child(1) {
+  color: rgb(36, 36, 36);
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 24px;
+}
+.compareShopLeft p:nth-child(2) {
+  color: rgb(120, 120, 120);
+  font-size: 13px;
+  line-height: 20px;
+}
+.compareShopRight {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 500;
+  color: rgb(13, 92, 182);
+  border: 1px solid rgb(13, 92, 182);
+  border-radius: 4px;
+  padding: 6px 12px;
+  height: 34px;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  cursor: pointer;
+}
+.sliderItem {
+  padding: 12px !important;
+  position: relative !important;
+  display: flex !important;
+  flex-direction: column !important;
+  -webkit-box-align: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  cursor: pointer;
+  // background-color: rgb(255, 255, 255);
+}
+.infoItem {
+  width: 100%;
+  padding: 8px 0px;
+  margin: 0px 12px;
+  min-height: 94px;
+}
+.priceItem {
+  text-align: left;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  color: rgb(56, 56, 61);
+  margin: 2px 0px 0px !important;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.titleItem {
+  max-height: 40px;
+  height: auto;
+  position: relative;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  max-height: 40px;
+  min-height: 32px;
+  margin: 0px;
+  width: 100%;
+  color: rgb(36, 36, 36);
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 16px;
+  letter-spacing: 0.1px;
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+}
+.titleItem h3 {
+  margin: 0px;
+  font-weight: 400;
+  font-size: 12px !important;
+}
+.bottomItem {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  align-self: stretch;
+  margin-top: 3px;
+}
+.rating {
+  display: flex;
+  align-items: center;
+}
+.rating span {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: rgb(128, 128, 137);
+}
+.sell {
+  display: flex;
+  align-items: center;
+  color: rgb(128, 128, 137);
+  line-height: normal;
+  font-size: 12px;
+  padding-left: 4px;
+}
+.sellBorder {
+  width: 1px;
+  height: 9px;
+  background-color: rgb(199, 199, 199);
+}
+.sliderPart {
+  margin: 16px 0px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+}
+.sliderPart h2 {
+  color: rgb(51, 51, 51);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  padding: 8px 16px;
+  text-transform: capitalize;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  margin: 0px;
+}
+.sliderItem:hover {
+  box-shadow: rgb(0 0 0 / 10%) 0px 0px 20px;
+}
